--- a/hello-world/test/index.html
+++ b/hello-world/test/index.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-<title>this is a test</title>
+<title>cgepy</title>
 </head>
 
 <body>
-
-<h1>hello world</h1>
+<div class="title">
+    <h1>cgepy</h1>
+</div>
 <p>goodbye world</p>
 
 </body>
