--- a/hello-world/test/index.html
+++ b/hello-world/test/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-<title>cgepy</title>
+    <title>cgepy</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-<div class="title">
+<div class="titlething">
     <h1>cgepy</h1>
 </div>
 <p>goodbye world</p>
